welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:9: error: forward reference extends over definition of value dec
		recule (getMondeHauteur()-dec)
                                          ^